fix(bootstrap4-theme): card button alignment

--- a/packages/bootstrap4-theme/src/scss/extends/_cards.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_cards.scss
@@ -143,6 +143,7 @@ Cards - Table of Contents
   display: flex;
   flex-wrap: wrap;
   row-gap: 1rem;
+  align-items: center;
 }
 
 .card > div:last-child {
